Opened 15 years ago

Closed 15 years ago

Last modified 15 years ago

#5354 closed bug (fixed)

desklink problems listing and removing items

Reported by: humdinger Owned by: stpere
Priority: normal Milestone: R1
Component: Applications/Command Line Tools Version: R1/Development
Keywords: desklink Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev35355.

I have the Media volume replicant, ProcessController and mail_daemon in my Deskbar tray:

~/Desktop> desklink --list
Deskbar items:
Item 2: 'MediaReplicant'

This list is obviously incomplete.
Adding any file to the tray will show one more item.
Adding another item will finally show all originally installed items:

~/Desktop> desklink --list
Deskbar items:
Item 2: 'MediaReplicant'
Item 3: 'ProcessController'
Item 4: 'mail_daemon'

So the count seems to be off by 2...

Now, if I continue adding things to the tray, finally my additions are also listed. But they aren't named like when added, but are all called "DeskButton":

~/Desktop> desklink --list
Deskbar items:
Item 2: 'MediaReplicant'
Item 3: 'ProcessController'
Item 4: 'mail_daemon'
Item 5: 'DeskButton'

In order to be able to remove a specific item, they should be correctly named after the item that was actually added.

Change History (4)

comment:1 by stpere, 15 years ago

Owner: changed from nobody to stpere
Status: newin-progress

comment:2 by stpere, 15 years ago

Resolution: fixed
Status: in-progressclosed

Should be fixed in hrev35402.

comment:3 by stpere, 15 years ago

Hmm.. the fact that the replicants were all named DeskButton was used by the remove all functionnality of desklink.. any suggestion how to conciliate both ideas?

comment:4 by humdinger, 15 years ago

Thank you so much for fixing this!

Frankly, I don't see much sense in removing every replicant in the tray. Besides, even before, the ones not added by desklink (e.g. Media volume) wouldn't be removed. I don't think it's too much to ask to remove the named replicants separately, but if really needed, maybe a new option "--remove-all" would be best.

Thanks again for the quick fix!

Note: See TracTickets for help on using tickets.