desklink: --list fixes  * Don't assume that ids to be contiguous (and to start at 0).  * Use the executable's name as the replicant view name (to ease its identification and removal)

Fixes ticket #5354.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35402 a95241bf-73f2-0310-859d-f6bbb57e9c96